<resources>
    <string name="app_name">HelmetSmart</string>

    <!--Pairing Configuration Screen-->
    <string name="str_pairing_confirmation">Pairing Confirmation</string>
    <string name="str_helmet_to_connect">Do you have a HelmetSmart\nSensor to connect to?</string>
    <string name="btn_yes_connect">Yes, Connect</string>
    <string name="btn_no_connect">No, Go To App</string>

    <!--Connect to HelmetSmart Screen-->
    <string name="str_connect_helmet_smart">Connect to HelmetSmart</string>
    <string name="str_helmet_smart_found">HelmetSmart is found.\nIs this the number\nyou see on your device?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!--Custom Fonts-->
    <string name="SetAppFont">fonts/Avenir-Roman.ttf</string>
    <string name="HelmetNo">fonts/Assistant-ExtraLight.ttf</string>
    <string name="ProgressTitle">fonts/MyriadPro-Regular.otf</string>
    <string name="Nirmala">fonts/NirmalaB.ttf</string>
    <string name="Gadugi">fonts/gadugi.ttf</string>

    <!--HelmetSmart Main Screen-->
    <string name="str_helmet">Helmet</string>
    <string name="str_speed">Speed</string>
    <string name="str_wore_helmet">Wore helmet today for</string>
    <string name="str_average_speed">Average speed was</string>
    <string name="str_riding_activity">Riding Activity</string>
    <string name="str_my_community">My Community</string>
    <string name="str_news_feed">NewsFeed</string>

    <!--My Trips Screen-->
    <string name="str_my_trips">My Trips</string>
    <string name="str_wore_today">Wore helmet\ntoday</string>
    <string name="str_distance">Distance\nCovered</string>
    <string name="str_avg_speed">Average Speed</string>
    <string name="str_with_helmet">with Helmet</string>
    <string name="str_road">Road</string>
    <string name="str_today">Today</string>

</resources>