<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:ignore="MissingPrefix">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_navigation_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line"
        android:layout_below="@+id/toolbar">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="com.helmetsmart.app.activity.MyTripsActivity">

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/progressHelmet"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    app:cpb_background_progressbar_color="@android:color/white"
                    app:cpb_background_progressbar_width="30dp"
                    app:cpb_progressbar_color="@color/progressColor"
                    app:cpb_progressbar_width="30dp" />

                <TextView
                    android:id="@+id/txtHelmet"
                    fontPath="@string/Gadugi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progressHelmet"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/str_helmet"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtHelmet"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/progressSpeed"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            app:cpb_background_progressbar_color="@android:color/white"
                            app:cpb_background_progressbar_width="30dp"
                            app:cpb_progressbar_color="@color/progressColor"
                            app:cpb_progressbar_width="30dp" />

                        <TextView
                            android:id="@+id/txtSpeed"
                            fontPath="@string/Gadugi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:text="@string/str_speed"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/progressDistance"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            app:cpb_background_progressbar_color="@android:color/white"
                            app:cpb_background_progressbar_width="30dp"
                            app:cpb_progressbar_color="@color/progressColor"
                            app:cpb_progressbar_width="30dp" />

                        <TextView
                            android:id="@+id/txtDistance"
                            fontPath="@string/Gadugi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:gravity="center"
                            android:text="@string/str_distance"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/newshadow"
                app:layout_anchor="@+id/progressHelmet"
                app:layout_anchorGravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        fontPath="@string/ProgressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/str_wore_today"
                        android:textSize="12sp" />

                    <TextView
                        fontPath="@string/Nirmala"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="57 km"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/newshadow"
                app:layout_anchor="@+id/progressSpeed"
                app:layout_anchorGravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        fontPath="@string/ProgressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/str_avg_speed"
                        android:textSize="12sp" />

                    <TextView
                        fontPath="@string/Nirmala"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="36 km/hr"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        fontPath="@string/ProgressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/str_with_helmet"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/newshadow"
                app:layout_anchor="@+id/progressDistance"
                app:layout_anchorGravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        fontPath="@string/ProgressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/str_road"
                        android:textSize="12sp" />

                    <TextView
                        fontPath="@string/Nirmala"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="89 km"
                        android:textColor="@color/text_color"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        fontPath="@string/ProgressTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/str_today"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

        </android.support.design.widget.CoordinatorLayout>

    </ScrollView>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/linearBottom"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/linearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:divider="@drawable/divider"
        android:orientation="horizontal"
        android:padding="8dp"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect_button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Home"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect_button"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_my_community" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="My\nCommunity"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect_button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_my_feed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="My Feeds"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_rect_button"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/ic_camera" />

    </LinearLayout>

</RelativeLayout>